# saberschema

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
schemas/: beatmap.schema.json  difficulty.schema.json  event.schema.json  info.schema.json  note.schema.json  obstacle.schema.json
tests/: BeatmapSchemaTests.cs  DifficultySchemaTests.cs  EventSchemaTests.cs  InfoSchemaTests.cs  NoteSchemaTests.cs  ObstacleSchemaTests.cs  conftest.py  test_schemas.py  tests.csproj  tests.sln
