[tool.poetry]
name = "saberschema"
version = "0.1.0"
description = "JSON schema for Beat Saber tracks"
authors = ["beatsabertools contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
hypothesis = "*"
black = {version = "*", allow-prereleases = true}
isort = "*"
ptpython = "*"
flake8 = "*"
pytest-xdist = "*"

[tool.black]
line-length = 120
target-version = ["py36"]
exclude = '''
(
\.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| \.vscode
| \.pytest_cache
| __pycache__
| build
| dist
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
skip_glob = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".vscode",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]
atomic = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
